Documentation edits made through Mintlify web editor

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -22,57 +22,52 @@ Optionally, you can _Bring Your Own OAuth_ — existing or newly applied API app
 1. The data provider OAuth authentication flow would use your branding; and
 2. Connections of your own OAuth application would be rate limited by the data provider independently from Junction's default application.
 
-
-| Provider (Slug)                                                                                                    | Junction default app | Developer Program for BYOO  | Remarks |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- | ------------------------ | ------- |
-| [Fitbit](https://www.fitbit.com/global/uk/home)  <br />`fitbit`<br />Activity Trackers (all devices)<br /><br />[↗️ Fitbit Guide](/wearables/guides/fitbit)                 | 🟢<br />Enabled      | 🟢<br />Self Sign-Up       | You can [create your own Fitbit API Application](https://dev.fitbit.com/build/reference/web-api/developer-guide/getting-started/). Note that for access to Intraday (timeseries) data, you must [submit an application to Fitbit](https://dev.fitbit.com/build/reference/web-api/intraday/).  |
-| [Garmin](https://www.garmin.com)                 <br />`garmin`<br />Fitness watches (all devices)<br /><br />[↗️ Garmin Guide](/wearables/guides/garmin)                   | 🟢<br />Enabled      | ⚠️<br />Application required  | You must [apply for Garmin Developer Program](https://developer.garmin.com/gc-developer-program/program-faq/). |
-| [Strava](https://www.strava.com)                 <br />`strava`<br />Running & Cycling Social Network                                                                      | 🟡<br />Congested    | ⚠️<br />Application required  | You can self-create a Strava API Application for testing. To connect more than 1 athelete, you must [submit your app to Strava for review](https://developers.strava.com/docs/getting-started/). |
-| [Oura](https://ouraring.com)                     <br />`oura`<br />Smart Sleep tracking ring                                                                               | 🟢<br />Enabled       | ⚠️<br />Application required  | You can self-create an Oura API Application for testing. To connect more than 10 Oura users, you must [submit your app to Oura for review](https://cloud.ouraring.com/docs/). |
-| [Wahoo](https://wahoofitness.com)                <br />`wahoo`<br />Cycling Equipment                                                                                      | 🟢<br />Enabled       | ⚠️<br />Application required  | You must [apply for Wahoo Cloud API access](https://developers.wahooligan.com/cloud). |
-| [Withings](https://www.withings.com)             <br />`withings`<br />Fitness scales, watches and health monitors                                                          | 🟡<br />Congested   | 🟢<br />Self Sign-Up          | You can [create your own Withings API Application](https://developer.withings.com/developer-guide/v3/withings-solutions/withings-api-plans).  |
-| [Polar](https://www.polar.com/accesslink-api/)   <br />`polar`<br />Finnish sports tech pioneer<br /><br />[↗️ Polar Guide](/wearables/guides/polar)                        | 🟢<br />Enabled      | 🟢<br />Self Sign-Up          | You can [create your own Polar API Application](https://www.polar.com/accesslink-api/#introduction). |
-| [Cronometer](https://www.cronometer.com)         <br />`cronometer`<br />Nutrition data                                                                                     | 🟢<br />Enabled      | ⚠️<br />Application required  | You must [apply to be a Cronometer API partner](https://cronometer.com/about/). |
-| [Ultrahuman](https://www.ultrahuman.com)         <br />`ultrahuman`<br />Real-time nutrition and fitness tracking                                                          | 🟢<br />Enabled       | ⚠️<br />Application required  | You must [apply to be a Ultrahuman API partner](https://blog.ultrahuman.com/blog/accessing-the-ultrahuman-partnership-api/). |
-| [Dexcom](https://www.dexcom.com)                 <br />`dexcom_v3`<br />Dexcom CGM Glucose monitors<br /><br />[↗️ Dexcom Guide](/wearables/guides/dexcom_v3)               | ➖<br />Unavailable | ⚠️<br />Application required  | You can self-create a Dexcom Sandbox API Application for testing. To connect Dexcom production users, you must [apply for the Dexcom Digital Health Partner status](https://developer.dexcom.com/docs/dexcom/scopes-access). |
-| [WHOOP](https://www.whoop.com)                   <br />`whoop_v2`<br />Your Personal Digital Fitness and Health Coach<br /><br />[↗️ WHOOP Guide](/wearables/guides/whoop)  | ➖<br />Unavailable | ⚠️<br />Application required  | You can self-create a Whoop API Application for testing. To connect more than 10 WHOOP members, you must [submit your app to WHOOP for review](https://developer.whoop.com/docs/developing/app-approval). |
-| [MyFitnessPal API](https://www.myfitnesspalapi.com) <br />`my_fitness_pal_v2`<br />Nutrition data                                                                           | ➖<br />Unavailable | ➖<br />Application closed    | N/A |
-| [MapMyFitness](https://developer.mapmyfitness.com)         <br />`map_my_fitness`<br />Technology for all atheletes                                                         | ➖<br />Unavailable | ➖<br />Application closed    | N/A |
-
+| Provider (Slug)                                                                                                                                                            | Junction default app | Developer Program for BYOO   | Remarks                                                                                                                                                                                                                                                                                      |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- | ---------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Fitbit](https://www.fitbit.com/global/uk/home)  <br />`fitbit`<br />Activity Trackers (all devices)<br /><br />[↗️ Fitbit Guide](/wearables/guides/fitbit)                | 🟢<br />Enabled      | 🟢<br />Self Sign-Up         | You can [create your own Fitbit API Application](https://dev.fitbit.com/build/reference/web-api/developer-guide/getting-started/). Note that for access to Intraday (timeseries) data, you must [submit an application to Fitbit](https://dev.fitbit.com/build/reference/web-api/intraday/). |
+| [Garmin](https://www.garmin.com)                 <br />`garmin`<br />Fitness watches (all devices)<br /><br />[↗️ Garmin Guide](/wearables/guides/garmin)                  | 🟢<br />Enabled      | ⚠️<br />Application required | You must [apply for Garmin Developer Program](https://developer.garmin.com/gc-developer-program/program-faq/).                                                                                                                                                                               |
+| [Strava](https://www.strava.com)                 <br />`strava`<br />Running & Cycling Social Network                                                                      | 🟡<br />Congested    | ⚠️<br />Application required | You can self-create a Strava API Application for testing. To connect more than 1 athelete, you must [submit your app to Strava for review](https://developers.strava.com/docs/getting-started/).                                                                                             |
+| [Oura](https://ouraring.com)                     <br />`oura`<br />Smart Sleep tracking ring                                                                               | 🟢<br />Enabled      | ⚠️<br />Application required | You can self-create an Oura API Application for testing. To connect more than 10 Oura users, you must [submit your app to Oura for review](https://cloud.ouraring.com/docs/).                                                                                                                |
+| [Wahoo](https://wahoofitness.com)                <br />`wahoo`<br />Cycling Equipment                                                                                      | 🟢<br />Enabled      | ⚠️<br />Application required | You must [apply for Wahoo Cloud API access](https://developers.wahooligan.com/cloud).                                                                                                                                                                                                        |
+| [Withings](https://www.withings.com)             <br />`withings`<br />Fitness scales, watches and health monitors                                                         | 🟡<br />Congested    | 🟢<br />Self Sign-Up         | You can [create your own Withings API Application](https://developer.withings.com/developer-guide/v3/withings-solutions/withings-api-plans).                                                                                                                                                 |
+| [Polar](https://www.polar.com/accesslink-api/)   <br />`polar`<br />Finnish sports tech pioneer<br /><br />[↗️ Polar Guide](/wearables/guides/polar)                       | 🟢<br />Enabled      | 🟢<br />Self Sign-Up         | You can [create your own Polar API Application](https://www.polar.com/accesslink-api/#introduction).                                                                                                                                                                                         |
+| [Cronometer](https://www.cronometer.com)         <br />`cronometer`<br />Nutrition data                                                                                    | 🟢<br />Enabled      | ⚠️<br />Application required | You must [apply to be a Cronometer API partner](https://cronometer.com/about/).                                                                                                                                                                                                              |
+| [Ultrahuman](https://www.ultrahuman.com)         <br />`ultrahuman`<br />Real-time nutrition and fitness tracking                                                          | 🟢<br />Enabled      | ⚠️<br />Application required | You must [apply to be a Ultrahuman API partner](https://blog.ultrahuman.com/blog/accessing-the-ultrahuman-partnership-api/).                                                                                                                                                                 |
+| [Dexcom](https://www.dexcom.com)                 <br />`dexcom_v3`<br />Dexcom CGM Glucose monitors<br /><br />[↗️ Dexcom Guide](/wearables/guides/dexcom_v3)              | ➖<br />Unavailable   | ⚠️<br />Application required | You can self-create a Dexcom Sandbox API Application for testing. To connect Dexcom production users, you must [apply for the Dexcom Digital Health Partner status](https://developer.dexcom.com/docs/dexcom/scopes-access).                                                                 |
+| [WHOOP](https://www.whoop.com)                   <br />`whoop_v2`<br />Your Personal Digital Fitness and Health Coach<br /><br />[↗️ WHOOP Guide](/wearables/guides/whoop) | ➖<br />Unavailable   | ⚠️<br />Application required | You can self-create a Whoop API Application for testing. To connect more than 10 WHOOP members, you must [submit your app to WHOOP for review](https://developer.whoop.com/docs/developing/app-approval).                                                                                    |
+| [MyFitnessPal API](https://www.myfitnesspalapi.com) <br />`my_fitness_pal_v2`<br />Nutrition data                                                                          | ➖<br />Unavailable   | ➖<br />Application closed    | N/A                                                                                                                                                                                                                                                                                          |
+| [MapMyFitness](https://developer.mapmyfitness.com)         <br />`map_my_fitness`<br />Technology for all atheletes                                                        | ➖<br />Unavailable   | ➖<br />Application closed    | N/A                                                                                                                                                                                                                                                                                          |
 
 ### Non-OAuth Providers
 
-| Provider (Slug)                                                          | Description                                                   | Remarks |
-| ------------------------------------------------------------------------ | ------------------------------------------------------------- | ------- |
-| [Beurer](https://www.beurer.com/web/gb/)         <br />`beurer_api`      | Beurer Blood Pressure monitors                                | Password Auth |
-| [Dexcom (G6 And Older)](https://www.dexcom.com)  <br />`dexcom`<br /><br />[↗️ Dexcom Guide](/wearables/guides/dexcom)          | Dexcom CGM Glucose monitors        | Password Auth |
-| [8Sleep](https://www.eightsleep.com)             <br />`eight_sleep`     | Smart Mattress                                                | Password Auth |
-| [Abbott LibreView](https://www.libreview.com/)   <br />`abbott_libreview`<br /><br />[↗️ LibreView Guide](/wearables/guides/abbott-libreview)| Abbott CGM Glucose monitor                                    | Password Auth |
-| [Freestyle Libre](https://www.libreview.com/)    <br />`freestyle_libre`<br /><br />[↗️ LibreView Guide](/wearables/guides/abbott-libreview) | Abbott CGM Glucose monitor                                    | Practice-based Connections |
-| [Hammerhead](https://www.hammerhead.io)          <br />`hammerhead`      | Cycling computers                                             | Password Auth |
-| [Peloton](https://www.onepeloton.com)            <br />`peloton`         | Popular Indoor Exercise bike                                  | Password Auth |
-| [Zwift](https://zwift.com)                       <br />`zwift`           | Virtual cycling and running                                   | Password Auth |
-
+| Provider (Slug)                                                                                                                               | Description                    | Remarks                    |
+| --------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------ | -------------------------- |
+| [Beurer](https://www.beurer.com/web/gb/)         <br />`beurer_api`                                                                           | Beurer Blood Pressure monitors | Password Auth              |
+| [Dexcom (G6 And Older)](https://www.dexcom.com)  <br />`dexcom`<br /><br />[↗️ Dexcom Guide](/wearables/guides/dexcom)                        | Dexcom CGM Glucose monitors    | Password Auth              |
+| [8Sleep](https://www.eightsleep.com)             <br />`eight_sleep`                                                                          | Smart Mattress                 | Password Auth              |
+| [Abbott LibreView](https://www.libreview.com/)   <br />`abbott_libreview`<br /><br />[↗️ LibreView Guide](/wearables/guides/abbott-libreview) | Abbott CGM Glucose monitor     | Password Auth              |
+| [Freestyle Libre](https://www.libreview.com/)    <br />`freestyle_libre`<br /><br />[↗️ LibreView Guide](/wearables/guides/abbott-libreview)  | Abbott CGM Glucose monitor     | Practice-based Connections |
+| [Hammerhead](https://www.hammerhead.io)          <br />`hammerhead`                                                                           | Cycling computers              | Password Auth              |
+| [Peloton](https://www.onepeloton.com)            <br />`peloton`                                                                              | Popular Indoor Exercise bike   | Password Auth              |
+| [Zwift](https://zwift.com)                       <br />`zwift`                                                                                | Virtual cycling and running    | Password Auth              |
 
 ### Deprecated providers
 
-| Provider (Slug)                                                             | Status                                                                                        | Availability | Remarks |
-| --------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- | ------------ | ------- |
-| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit`     | Google will shut down Google Fit sometime in 2026. Android Health Connect is the successor.   | All Junction Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit) |
-| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal`     | Deprecated                                                                                    | All Junction Teams | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
-
-
+| Provider (Slug)                                                         | Status                                                                                      | Availability       | Remarks                                                                        |
+| ----------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- | ------------------ | ------------------------------------------------------------------------------ |
+| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit` | Google will shut down Google Fit sometime in 2026. Android Health Connect is the successor. | All Junction Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit)                            |
+| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal` | Deprecated                                                                                  | All Junction Teams | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
 
 ## SDK Based Providers
 
-| Provider (Slug)                                                                                  | Description                                       | Guide |
-| ------------------------------------------------------------------------------------------------ | ------------------------------------------------- | ----- |
-| [Accu-Chek](https://www.accu-chek.com) (Bluetooth)                   <br />`accuchek_ble`        | Glucose Strips/MySugr App                         |       |
-| [Apple HealthKit](https://www.apple.com/uk/ios/health/)              <br />`apple_health_kit`    | Health and fitness data on iPhone and Apple Watch | [↗️ Guide](/wearables/guides/apple-healthkit) |
-| [Beurer](https://www.beurer.com/web/gb/) (Bluetooth)                 <br />`beurer_ble`          | Beurer Blood Pressure monitors                    |       |
-| [Contour](https://www.diabetes.ascensia.com) (Bluetooth)             <br />`contour_ble`         | Glucometers                                       |       |
-| [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (NFC) <br />`freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK       |       |
-| [Omron](https://www.omron-healthcare.com) (Bluetooth)                <br />`omron_ble`           | Blood Pressure monitors and scales                |       |
+| Provider (Slug)                                                                                  | Description                                       | Guide                                                |
+| ------------------------------------------------------------------------------------------------ | ------------------------------------------------- | ---------------------------------------------------- |
+| [Accu-Chek](https://www.accu-chek.com) (Bluetooth)                   <br />`accuchek_ble`        | Glucose Strips/MySugr App                         |                                                      |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/)              <br />`apple_health_kit`    | Health and fitness data on iPhone and Apple Watch | [↗️ Guide](/wearables/guides/apple-healthkit)        |
+| [Beurer](https://www.beurer.com/web/gb/) (Bluetooth)                 <br />`beurer_ble`          | Beurer Blood Pressure monitors                    |                                                      |
+| [Contour](https://www.diabetes.ascensia.com) (Bluetooth)             <br />`contour_ble`         | Glucometers                                       |                                                      |
+| [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (NFC) <br />`freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK       |                                                      |
+| [Omron](https://www.omron-healthcare.com) (Bluetooth)                <br />`omron_ble`           | Blood Pressure monitors and scales                |                                                      |
 | [Android Health Connect](https://developer.android.com/health-connect)<br />`health_connect`     | Health and fitness data on Android devices        | [↗️ Guide](/wearables/guides/android-health-connect) |
 
 ## Providers under beta
@@ -95,13 +90,7 @@ Optionally, you can _Bring Your Own OAuth_ — existing or newly applied API app
 
 ## Full Device Support List
 
-<iframe
-  src="https://airtable.com/embed/shrnlG3Z7tunKuUwh/tblRcat09AWv1Aj7L/viwgVLLG0uqKB0vbi"
-  frameborder="0"
-  allowfullscreen="true"
-  width="100%"
-  height="533"
-  loading="lazy"
->
-  {" "}
+<iframe src="https://airtable.com/embed/appoa9L7o7WBvTqt9/shrwf455EoJahEUrV?viewControls=on" frameborder="0" allowfullscreen="true" width="100%" height="533" loading="lazy">
+{" "}
+
 </iframe>
