--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -2,15 +2,13 @@
 title: "Introduction"
 ---
 
-Vital's lab test API allows digital health companies to carry out at-home lab testing.
-Companies can use the API to order a variety of tests, using multiple sampling methods.
+Vital's lab test API allows digital health companies to carry out at-home lab testing. Companies can use the API to order a variety of tests, using multiple sampling methods.
 
-We partner with CLIA and CAP certified labs across the United States that cover a range of different diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
-We collect these test samples via at-home kits, or phlebotomy.
+We partner with CLIA and CAP certified labs across the United States that cover a range of different diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more. We collect these test samples via at-home kits, or phlebotomy.
 
 ### Features
 
-Our lab test API gives you an end-to-end experience, from ordering a test all the way to receiving results, all with one API call\!
+Our lab test API gives you an end-to-end experience, from ordering a test all the way to receiving results, all with one API call!
 
 What we offer:
 
@@ -22,7 +20,7 @@ What we offer:
 
 ### Start integrating
 
-You can sign-up today to our sandbox environment. The [quickstart](/lab/overview/quickstart-api) guide will help you getting from zero to ordering tests in less than 30 minutes\! Once the integration is ready, switching to production will just be a matter of switching API keys.
+You can sign-up today to our sandbox environment. The [quickstart](/lab/overview/quickstart) guide will help you getting from zero to ordering tests in less than 30 minutes! Once the integration is ready, switching to production will just be a matter of switching API keys.
 
 ### Production launch
 
