--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -108,6 +108,7 @@ Below is a full list of all the available statuses by test modality. The names s
 - `collecting_sample.at_home_phlebotomy.appointment_cancelled`
 - `sample_with_lab.at_home_phlebotomy.partial_results`
 - `completed.at_home_phlebotomy.completed`
+- `failed.at_home_phlebotomy.sample_error`
 - `cancelled.at_home_phlebotomy.cancelled`
 
 ### On-site collection statuses (currently in beta testing)
