--- a/docs/lab/walk-in/order-lifecycle.mdx
+++ b/docs/lab/walk-in/order-lifecycle.mdx
@@ -26,6 +26,7 @@ possible low-level status are:
 - `partial_results`: The laboratory has started making partial results available.
 - `redraw_available`: The result has been marked as final but is missing biomarker results due to lab error. (Currently in beta testing.)
 - `completed`: The laboratory processed the blood sample and final results are available.
+- `sample_error`: The collected sample was unprocessable by the lab.
 - `cancelled`: The order was cancelled by either the patient, Vital or you.
 
 The Finite State Machine that defines the possible transitions for the low-level statuses described above is illustrated
